--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-	<meta name="description" content="JOHO TAROのポートフォリオサイトです" />
+	<meta name="description" content="SAGA TAKUTOのポートフォリオサイトです" />
 	<title>PORTFOLIO</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
 		<header class="header ">
 			<div class="inner">
 				<h1 class="header-logo">
-					<a href=".">JOHO TARO</a>
+					<a href=".">SAGA TAKUTO</a>
 				</h1>
 				<nav class="header-nav">
 					<ul class="header-nav-list">
@@ -39,8 +39,20 @@
 					<p class="main-visual-title">SAGA TAKUTO</p>
 					<p class="main-visual-subtitle">PORTFOLIO</p>
 					<div class="main-visual-profile">
+						<style>
+						img{
+							width: 100px;
+                			margin-right: 2em;
+						}
+						.zigazou { animation: loading 0.5s linear 0s infinite; }
+						@keyframes loading{
+							0% {transform: rotate(0deg);}
+							50% {transform: rotate(180deg);}
+							100% {transform: rotate(360deg);}
+						}
+						</style>
 						<p class="main-visual-img">
-							<img src="portfolio/img/profile.png" alt="自画像" />
+							<img class="zigazou"  src="portfolio/img/profile.png" alt="自画像" />
 						</p>
 						<p class="main-visual-text">
 							開校53年の経験とノウハウがあり、<br class="sp-only">他校ではマネのできない実績。<br>
@@ -106,11 +118,11 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Python</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									授業で生かした技術を使い、仕事をこなせるよう頑張ります。</p>
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/icon_skill_3.png" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Java</h3>
 								<p class="skill-text">
@@ -122,7 +134,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">国家試験</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									基本情報技術者、応用情報技術者の取得を目指して日々精進しています。</p>
 							</div>
 						</div>
 					</div>
