--- a/index.html
+++ b/index.html
@@ -36,12 +36,11 @@
 			<!-- main-visual -->
 			<div class="main-visual" id="about">
 				<div class="main-visual-inner">
-					<p class="main-visual-title">SAGA TAKUTO</p>
-					<p class="main-visual-subtitle">PORTFOLIO</p>
+					<img class = "taitle" src="portfolio/img/taitle.png">
 					<div class="main-visual-profile">
 						<style>
 						img{
-							width: 100px;
+							width: 150px;
                 			margin-right: 2em;
 						}
 						.zigazou { animation: loading 1s linear 0s infinite; }
