--- a/ensyu/22_2.html
+++ b/ensyu/22_2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>テーブルデザイン</title>
-        <link rel="stylsheet" href="22_2.css">
+        <link rel="stylesheet" href="22_2.css">
     </head>
     <body>
         <table class="first">
