--- a/ensyu/23_2.html
+++ b/ensyu/23_2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" />
         <title>フォームデザイン2</title>
-        <link rel="stylesheet" href="23_1.css">
+        <link rel="stylesheet" href="23_2.css">
     </head>
     <body>
         <form action="program.php" method="post">
