--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
 					<h2 class="title">SKILL</h2>
 					<div class="skill-list">
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/icon_skill_1.png" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">HTML5/CSS3</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									自分の好きなこの授業で、コードやサイトの作り方などを最大限身に着けていきたいと思います。</p>
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/icon_skill_2.png" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Python</h3>
 								<p class="skill-text">
@@ -125,11 +125,11 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Java</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									私にとってはかなり難しい分野ですが、将来の為にしっかりと学びたいと思います。</p>
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/icon_skill_4.png" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">国家試験</h3>
 								<p class="skill-text">
